--- a/templates/solace-aws-master.template
+++ b/templates/solace-aws-master.template
@@ -24,6 +24,8 @@
                         "PublicSubnet1CIDR",
                         "PublicSubnet2CIDR",
                         "PublicSubnet3CIDR",
+                        "PrivateSubnet1CIDR",
+                        "PrivateSubnet2CIDR",
                         "RemoteAccessCIDR",
                         "SSHAccessCIDR"
                     ]
@@ -79,7 +81,7 @@
                     "default": "Availability Zones"
                 },
                 "NumberOfAZs": {
-                    "default": "3"
+                    "default": "Number of Availability Zones"
                 },
                 "BootDiskSize": {
                     "default": "Boot Disk Capacity (GiB)"
@@ -116,6 +118,12 @@
                 },
                 "PublicSubnet3CIDR": {
                     "default": "Public Subnet 3 CIDR"
+                },
+                "PrivateSubnet1CIDR": {
+                    "default": "Public Subnet 1 CIDR"
+                },
+                "PrivateSubnet2CIDR": {
+                    "default": "Public Subnet 2 CIDR"
                 },
                 "RemoteAccessCIDR": {
                     "default": "Allowed External Access CIDR"
@@ -213,22 +221,36 @@
         "PublicSubnet1CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.128.0/24",
-            "Description": "CIDR Block for the public DMZ subnet 1 located in Availability Zone 1",
+            "Default": "10.0.128.0/25",
+            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
             "Type": "String"
         },
         "PublicSubnet2CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.129.0/24",
-            "Description": "CIDR Block for the public DMZ subnet 2 located in Availability Zone 2",
+            "Default": "10.0.129.0/25",
+            "Description": "CIDR Block for the bootstrap subnet 2 located in Availability Zone 2",
             "Type": "String"
         },
         "PublicSubnet3CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.130.0/24",
-            "Description": "CIDR Block for the public DMZ subnet 2 located in Availability Zone 2",
+            "Default": "10.0.130.0/25",
+            "Description": "CIDR Block for the bootstrap subnet 3 located in Availability Zone 3",
+            "Type": "String"
+        },
+        "PrivateSubnet1CIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
+            "Default": "10.0.128.128/25",
+            "Description": "CIDR Block for the AD sync subnet 1 located in Availability Zone 1",
+            "Type": "String"
+        },
+        "PrivateSubnet2CIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
+            "Default": "10.0.129.128/25",
+            "Description": "CIDR Block for the AD sync subnet 2 located in Availability Zone 2",
             "Type": "String"
         },
         "RemoteAccessCIDR": {
@@ -284,7 +306,7 @@
         "QSS3BucketName": {
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
             "ConstraintDescription": "Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
-            "Default": "solace-aws-ha-quickstart",
+            "Default": "quickstart-reference",
             "Description": "S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
             "Type": "String"
         },
@@ -395,7 +417,7 @@
                                 "Ref": "QSS3KeyPrefix"
                             },
                             "submodules/quickstart-aws-vpc",
-                            "templates/aws-vpc.template"
+                            "templates/aws-vpc-small.template"
                         ]
                     ]
                 },
@@ -408,7 +430,7 @@
                             }
                         ]
                     },
-                    "CreatePrivateSubnets": "false",
+                    "CreatePrivateSubnets": "true",
                     "KeyPairName": {
                         "Ref": "KeyPairName"
                     },
@@ -423,6 +445,12 @@
                     },
                     "PublicSubnet3CIDR": {
                         "Ref": "PublicSubnet3CIDR"
+                    },
+                    "PrivateSubnet1ACIDR": {
+                        "Ref": "PrivateSubnet1CIDR"
+                    },
+                    "PrivateSubnet2ACIDR": {
+                        "Ref": "PrivateSubnet2CIDR"
                     },
                     "VPCCIDR": {
                         "Ref": "VPCCIDR"
@@ -495,6 +523,12 @@
                     "LinuxOSAMI": {
                         "Ref": "LinuxOSAMI"
                     },
+                    "QSS3BucketName": {
+                        "Ref": "QSS3BucketName"
+                    },
+                    "QSS3KeyPrefix": {
+                        "Ref": "QSS3KeyPrefix"
+                    },
                     "RemoteAccessCIDR": {
                         "Ref": "RemoteAccessCIDR"
                     },
@@ -530,6 +564,18 @@
                                             "Fn::GetAtt": [
                                                 "VPCStack",
                                                 "Outputs.PublicSubnet3ID"
+                                            ]
+                                        },
+                                        {
+                                            "Fn::GetAtt": [
+                                                "VPCStack",
+                                                "Outputs.PrivateSubnet1AID"
+                                            ]
+                                        },
+                                        {
+                                            "Fn::GetAtt": [
+                                                "VPCStack",
+                                                "Outputs.PrivateSubnet2AID"
                                             ]
                                         }
                                     ]
