--- a/scripts/ansible/ConfigNoShutMessageSpoolSEMPv1.yml
+++ b/scripts/ansible/ConfigNoShutMessageSpoolSEMPv1.yml
@@ -22,7 +22,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -40,6 +40,6 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
