--- a/scripts/ansible/ConfigRedundancyGroupSEMPv1.yml
+++ b/scripts/ansible/ConfigRedundancyGroupSEMPv1.yml
@@ -35,7 +35,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -55,7 +55,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -76,7 +76,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -97,7 +97,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -117,7 +117,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -138,7 +138,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -159,7 +159,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -179,7 +179,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -200,7 +200,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -221,7 +221,7 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
 
@@ -239,6 +239,6 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
