--- a/scripts/ansible/ConfigRedundancyNoShutSEMPv1.yml
+++ b/scripts/ansible/ConfigRedundancyNoShutSEMPv1.yml
@@ -19,6 +19,6 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
