--- a/scripts/ansible/ConfigShutMessageSpoolSEMPv1.yml
+++ b/scripts/ansible/ConfigShutMessageSpoolSEMPv1.yml
@@ -17,6 +17,6 @@
          return_content:   yes
       register: rpc_reply
       ignore_errors: True
-      until: rpc_reply|success
+      until: rpc_reply.content.find("code=\"ok\"") != -1
       retries: 60
       delay: 10
