--- a/scripts/ansible/ConfigConfigsyncNoShutSEMPv1.yml
+++ b/scripts/ansible/ConfigConfigsyncNoShutSEMPv1.yml
@@ -10,7 +10,7 @@
          url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
          method:           GET
          user:             "{{ ANSIBLE_USERNAME }}"
-         password:         "{{ ANSIBLE_PASSWORD }}"
+         password:         "{{ lookup('env','admin_password') }}"
          body:             "<rpc semp-version='soltr/8_2VMR'>\
                            <config-sync><no><shutdown/></no></config-sync></rpc>"
          force_basic_auth: yes
