--- a/scripts/ansible/ConfigRedundancyMateSEMPv1.yml
+++ b/scripts/ansible/ConfigRedundancyMateSEMPv1.yml
@@ -13,7 +13,7 @@
          url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
          method:           GET
          user:             "{{ ANSIBLE_USERNAME }}"
-         password:         "{{ ANSIBLE_PASSWORD }}"
+         password:         "{{ lookup('env','admin_password') }}"
          body:             "<rpc semp-version='soltr/8_2VMR'>\
                            <redundancy><active-standby-role><{{ VMR_ROLE }}/></active-standby-role></redundancy></rpc>"
          force_basic_auth: yes
@@ -31,7 +31,7 @@
          url:              "http://{{ ANSIBLE_VMR_IP }}:{{ ANSIBLE_VMR_SEMP_PORT }}/SEMP"
          method:           GET
          user:             "{{ ANSIBLE_USERNAME }}"
-         password:         "{{ ANSIBLE_PASSWORD }}"
+         password:         "{{ lookup('env','admin_password') }}"
          body:             "<rpc semp-version='soltr/8_2VMR'>\
                            <redundancy><mate-link><connect-via><hostname-or-address>{{ MATE_IP }}</hostname-or-address></connect-via></mate-link></redundancy></rpc>"
          force_basic_auth: yes
